hphp/test/slow/parser/php-reserved-name-array-1.php.expectf
Fatal error: A name is expected here. in %s/test/slow/parser/php-reserved-name-array-1.php on line 4
